git-svn-id: http://svn.vdombox.ru/flextools/trunk@1933 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/Vdom.mxml
+++ b/IDE/Vdom/Vdom.mxml
@@ -40,14 +40,17 @@
 			<vdomTitleBar:VdomTitleBar  left="0" right="0"/>
 			
 			<mx:Canvas backgroundColor="#ffffff" top="50" right="0" bottom="0" left="0" borderStyle="solid" borderColor="#000000">
-				<controls:MainTabNavigator id="tabPanel" tabHeight="25"
-					right="5" bottom="5"
-					tabPaddingLeft="80" left="5" borderStyle="none" top="5">
+				<controls:MainTabNavigator id="tabPanel"
+					right="5" bottom="5" left="5" top="5"
+					borderStyle="none" 
+					tabHeight="25" tabPaddingLeft="80">
 			
-		 			<modules:ApplicationManagment id="applicationManagmentModule" label="{resourceManager.getString('Application','main_title')}" />
+		 			<modules:ApplicationManagment id="applicationManagmentModule"
+		 				label="{resourceManager.getString('Application','main_title')}"/>
 		 	
-		 			<modules:Editor label="{resourceManager.getString('Application','editor_title')}" 
-		 				width="100%" height="100%"  borderStyle="solid" borderColor="#000000"/>
+		 			<modules:Editor
+		 				label="{resourceManager.getString('Application','editor_title')}" 
+		 				width="100%" height="100%"/>
 				</controls:MainTabNavigator>
 			</mx:Canvas>
 			<mx:Image x="10" y="10" width="62" height="62" source="{vdomLogo}"/>
