--- a/IDE/Vdom/vdom/modules/Editor.mxml
+++ b/IDE/Vdom/vdom/modules/Editor.mxml
@@ -69,7 +69,8 @@
 	
 	<mx:ViewStack id="placeCanvas" 
 		width="100%" height="100%" styleName="vdomBackground"
-		dropShadowEnabled="true" borderStyle="solid"  borderColor="#000000">
+		paddingTop="5" paddingBottom="5" paddingLeft="5" paddingRight="5" 
+		dropShadowEnabled="true" >
 	
 		<mx:Canvas id="initComponent" width="100%" height="100%">
 			<mx:Label text="Loading..." horizontalCenter="0" verticalCenter="0" />
