--- a/IDE/Vdom/vdom/components/analyse/Analyse.mxml
+++ b/IDE/Vdom/vdom/components/analyse/Analyse.mxml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <mx:Canvas 
-	
-	xmlns:mx="http://www.adobe.com/2006/mxml"  
-	
-	
+	xmlns:mx="http://www.adobe.com/2006/mxml"
 	backgroundColor="#ffffff" creationComplete="creationCompleteHendler();" xmlns:resourceBrowser="vdom.controls.resourceBrowser.*">
 	
 	<mx:Script>
 		<![CDATA[
+			import vdom.controls.externalEditorButton.ExternalEditorButton;
 			import vdom.controls.databaseEditor.dbStructureEditor;
 			import vdom.controls.resourceBrowser.ResourceBrowser;
 			import mx.managers.PopUpManager;
@@ -24,13 +22,23 @@
 			private function creationCompleteHendler():void
 			{
 				dataManager = DataManager.getInstance();
+				__rBrowser.value = "#Res(eroweirf8df98dfygdyf)";
 				//publicData = Application.application.publicData; 
-		//		trace('publicData: \n'+ publicData)
+				//trace('publicData: \n'+ publicData)
 				
 			}
 			
+			private function button1Click():void {
+				var exBtn:ExternalEditorButton = new ExternalEditorButton("58a4358d-2dce-4bd3-ace9-62a72316d84d", "d80c2af8-312c-43d3-bb1a-518f07cf698b", "192ae814-2258-481c-aaf9-c9a59aa0165c");
+				exBtn.width = 100;
+				exBtn.height = 22;
+				exBtn.x = 10;
+				exBtn.y = 65;
+				addChild(exBtn);
+				exBtn.value = "<TableStructure><TableDef id='ac73b296-d4f0-4a3e-b64c-19fe3fde0a5b' name='dbtable_ac73b296_d4f0_4a3e_b64c_19fe3fde0a5b'><ColumnDef id='djhgfkshdgfkjds' name='id' type='text'/><ColumnDef id='iueyhri843rhskj' name='name' type='text'/><ColumnDef id='dkjhgkdjfhgkjfv' name='pic' type='blob'/></TableDef><ChangeLog /></TableStructure>";
+			}
 			
-			
+					
 			private function resourceBrowserLauncher():void {
 				PopUpManager.createPopUp(this, ResourceBrowser, true);
 			}
@@ -42,8 +50,8 @@
 		]]>
 	</mx:Script>
 	
-	<mx:Button id="test" x="10" y="10" label="Button" height="20" />
-	<resourceBrowser:ResourceBrowserButton x="10" y="35" />
+	<mx:Button id="test" x="10" y="10" label="Button" height="20" click="{button1Click();}"/>
+	<resourceBrowser:ResourceBrowserButton x="10" y="35" id="__rBrowser"/>
 	<mx:Button x="174" y="35" label="Open DB Structure Editor" height="20" click="{dbStructureEditorLauncher();}" />
 			
 </mx:Canvas>
