--- a/IDE/Vdom/vdom/controls/resourceBrowser/ResourceBrowserButton.mxml
+++ b/IDE/Vdom/vdom/controls/resourceBrowser/ResourceBrowserButton.mxml
@@ -1,18 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx:HBox xmlns:mx="http://www.adobe.com/2006/mxml" height="20" width="100" horizontalAlign="right" initialize="initaliseHandler();" verticalAlign="middle">
+<mx:HBox 
+	xmlns:mx="http://www.adobe.com/2006/mxml" height="20" width="100" horizontalAlign="right"
+	verticalAlign="middle" horizontalGap="1">
+
 	<mx:Script>
-	
 		<![CDATA[
 			import mx.core.Application;
 			import mx.managers.PopUpManager;
 			import vdom.events.ResourceBrowserEvent;
 			
+			private const regResource:RegExp = /^#Res\(([-a-zA-Z0-9]*)\)/;
 			private var _value:String = "";
 			private var _title:String = "";
-			private var _rBrowserInstance:ResourceBrowser;
-	
-			private function initaliseHandler():void {
-			}
+			private var rBrowserInstance:ResourceBrowser;
+			[Bindable]
+			private var _labelText:String = "";
+			[Bindable]
+			private var clearBtnEnabled:Boolean = false;
 	
 			public function set title(attrValue:String):void {
 				_title = attrValue;
@@ -25,29 +29,37 @@
 	
 			public function set value(attrValue:String):void {
 				_value = attrValue;
-			}
-	
-			private function openWindow():void {
-				_rBrowserInstance = ResourceBrowser(PopUpManager.createPopUp(DisplayObject(Application.application), ResourceBrowser, true));
-				PopUpManager.centerPopUp(_rBrowserInstance);
-				_rBrowserInstance.addEventListener(ResourceBrowserEvent.RESOURCE_SELECTED, completeHandler);
-				
-				var resRegExp:RegExp = /^#Res\(([-a-zA-Z0-9]*)\)/;
-				if (_value.match(resRegExp) != null) {
-					_rBrowserInstance.selectedItemID = _value.match(resRegExp)[1];
-//					trace("Resource browser: selected resource id is " + _rBrowserInstance.selectedItemID);
+				var matchResult:Array = _value.match(regResource);
+				if (matchResult) {
+					_labelText = "Resource ID: " + matchResult[1];
+					clearBtnEnabled = true;
+				} else {
+					_labelText = "";
+					_value = "";
+					clearBtnEnabled = false;
 				}
 			}
 	
+			private function openWindow():void {
+				rBrowserInstance = ResourceBrowser(PopUpManager.createPopUp(DisplayObject(Application.application), ResourceBrowser, true));
+				rBrowserInstance.addEventListener(ResourceBrowserEvent.RESOURCE_SELECTED, completeHandler);
+				PopUpManager.centerPopUp(rBrowserInstance);
+				
+				var matchResult:Array = _value.match(regResource);
+				if (matchResult)
+					rBrowserInstance.selectedItemID = matchResult[1];
+			}
+	
 			private function completeHandler(event:ResourceBrowserEvent):void {
-				_value = "#Res(" + event.resourceID + ")";
-				lbl.text = event.resourceName;
-//				trace("Resource browser: now selected resource id is " + _value);
+				this.value = "#Res(" + event.resourceID + ")";
+				_labelText = event.resourceName;
 			}
 	
 		]]>
 	</mx:Script>
 
-	<mx:Label text="{value}" id="lbl" width="70"/>
-	<mx:Button label="..." height="20" cornerRadius="0" click="openWindow()" width="22" paddingLeft="2" paddingRight="2"/>
+	<mx:Label text="{_labelText}" id="__label" width="{this.width - 43}" />
+	<mx:LinkButton id="__clearBtn"
+		enabled="{clearBtnEnabled}" label="X" height="20" cornerRadius="5" click="{this.value = '';}" width="20" paddingLeft="1" paddingRight="1" />
+	<mx:Button label="..." height="20" cornerRadius="0" click="{openWindow();}" width="22" paddingLeft="2" paddingRight="2"/>
 </mx:HBox>
