Application Search, ExternalManager fix.
git-svn-id: http://svn.vdombox.ru/flextools/trunk@1970 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/Vdom.mxml
+++ b/IDE/Vdom/Vdom.mxml
@@ -48,7 +48,7 @@
 		 			<modules:ApplicationManagment id="applicationManagmentModule"
 		 				label="{resourceManager.getString('Application','main_title')}"/>
 		 	
-		 			<modules:Editor
+		 			<modules:Editor id="editorModule"
 		 				label="{resourceManager.getString('Application','editor_title')}" 
 		 				width="100%" height="100%"/>
 				</controls:MainTabNavigator>
