--- a/IDE/Vdom/vdom/components/eventEditor/EventEditor.mxml
+++ b/IDE/Vdom/vdom/components/eventEditor/EventEditor.mxml
@@ -690,9 +690,9 @@
 		
         <mx:VBox id="vBox" width="100%" height="100%" >
             <mx:Canvas id="can" width="100%" height="100%" 
-            		backgroundColor="#cccccc"
+            		backgroundColor="#E1E1E1"
             	 	dragEnter="dragEnterHandler(event);" 
-    				dragDrop="dragDropHandler(event);">
+    				dragDrop="dragDropHandler(event);" borderColor="#DFDFDF">
                 
             </mx:Canvas>
         </mx:VBox>
